--- a/base_di_partenza/assets/css/Medium.css
+++ b/base_di_partenza/assets/css/Medium.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Spectral:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap");
+
 header {
   background-color: #ffc017;
 }
@@ -24,6 +27,7 @@ main {
   padding-right: 20px;
   align-content: center;
   font-size: 20px;
+  font-family: "Spectral", serif;
 }
 #Button1 button {
   text-decoration: none;
@@ -47,13 +51,15 @@ section {
 }
 
 #title {
-  font-size: 100px;
+  font-size: 80px;
   line-height: 1.4;
   font-weight: bold;
   margin-top: 50px;
+  font-family: "Roboto", sans-serif;
 }
 #subTitle {
-  font-size: 40px;
+  font-size: 30px;
+  font-family: "Spectral", serif;
 }
 
 #button2 button {
@@ -113,8 +119,9 @@ section {
   flex: 1;
 }
 .article-title {
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
-  font-weight: bold;
+  font-weight: 700;
   color: #222;
 }
 
@@ -141,11 +148,15 @@ aside {
 aside p {
   margin-left: 10px;
   font-size: 14px;
-  color: #666;
+  color: #252424;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
 }
 span .article-title {
   margin-top: 5px;
   margin-bottom: 10px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
 }
 
 h3 {
@@ -160,6 +171,7 @@ h3 {
 h1 {
   font-weight: bold;
   padding: 5px;
+  font-family: "Roboto", sans-serif;
 }
 .content p {
   padding: 5px;
@@ -179,7 +191,7 @@ h1 {
   justify-content: space-between;
 }
 .Container-2 {
-  width: 400px;
+  margin-right: 20px;
 }
 #container3 {
   display: flex;
@@ -211,8 +223,8 @@ h1 {
 }
 
 .container4 h4 {
-  font-weight: bold;
   font-size: 20px;
+  font-family: "Spectral", serif;
 }
 
 #ancor {
@@ -223,4 +235,11 @@ h1 {
   color: #717171;
   padding: 5px 8px;
   margin-right: 6px;
+}
+
+.article-meta span {
+  color: white;
+  background-color: #b6adad;
+  border-radius: 5px;
+  padding: 4px;
 }
